--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_header.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_header.scss
@@ -6,10 +6,6 @@
   --search-width: 500px;
 
   @screen lg {
-    --search-width: 700px;
-  }
-
-  @screen xl {
     --search-width: 800px;
   }
 }
@@ -70,24 +66,25 @@
           calc(
             (var(--content-wrapper-width) / -2 * 1px) +
               (var(--target-width) / 2 * 1px) +
-              (var(--button-width) * 2 + var(--button-gap) / 2)
+            (var(--button-width) + var(--button-gap) * 2)
           )
         );
       }
 
-      &:has(~ .resizable--wishlist.resizable--visible) {
-        transition-delay: 100ms;
+      //
+      //&:has(~ .resizable--wishlist.resizable--visible) {
+      //  transition-delay: 100ms;
+      //
+      //  /* has wishlist active */
+      //  transform: translateX(
+      //    calc(
+      //      (var(--wishlist-width) - var(--button-width) + var(--button-gap) * 2) *
+      //        -1
+      //    )
+      //  );
+      //}
 
-        /* has wishlist active */
-        transform: translateX(
-          calc(
-            (var(--wishlist-width) - var(--button-width) + var(--button-gap) * 2) *
-              -1
-          )
-        );
-      }
-
-      &:has(~ .resizable--cart.resizable--visible) {
+      &:has(+ .resizable--cart.resizable--visible) {
         transition-delay: 100ms;
 
         /* has cart active */
@@ -100,30 +97,30 @@
       }
     }
 
-    &--wishlist {
-      &.resizable--visible {
-        @screen md {
-          transform: translateX(
-            calc(
-              var(--button-gap) * -1
-            )
-          );
-        }
-      }
-
-      &:has(~ .resizable--cart.resizable--visible) {
-        @screen md {
-          transition-delay: 100ms;
-
-          /* has cart active */
-          transform: translateX(
-            calc(
-              (var(--minicart-width) - var(--button-width) + var(--button-gap)) *
-                -1
-            )
-          );
-        }
-      }
-    }
+    //&--wishlist {
+    //  &.resizable--visible {
+    //    @screen md {
+    //      transform: translateX(
+    //        calc(
+    //          var(--button-gap) * -1
+    //        )
+    //      );
+    //    }
+    //  }
+    //
+    //  &:has(~ .resizable--cart.resizable--visible) {
+    //    @screen md {
+    //      transition-delay: 100ms;
+    //
+    //      /* has cart active */
+    //      transform: translateX(
+    //        calc(
+    //          (var(--minicart-width) - var(--button-width) + var(--button-gap)) *
+    //            -1
+    //        )
+    //      );
+    //    }
+    //  }
+    //}
   }
 }
