Fix disappeared coupon error message

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -2,8 +2,8 @@
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
-use Magento\Checkout\Block\Cart\Coupon;
 use Magento\Framework\Escaper;
+use Satoshi\Checkout\Block\Cart\Coupon;
 use Satoshi\Theme\Block\Template;
 
 /** @var Template $block */
