--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -74,7 +74,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             </a>
         </div>
         <div class="contents md:flex md:flex-grow md:justify-end">
-            <div class="transition-all flex items-center z-10"
+            <div class="col-start-5 transition-all md:flex md:items-center z-10"
                  :class="{ 'md:drop-shadow-lg': $store.main.isHeaderShadowVisible }"
             >
                 <?=
