--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_advanced_result.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_advanced_result.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="columns" htmlClass="grid-columns content-wrapper mx-auto"/>
+        <referenceContainer name="main.content">
+            <block class="Magento\Framework\View\Element\Template" name="search.banner"
+                   template="Magento_Catalog::search/banner.phtml" before="-"/>
+            <block class="Magento\Framework\View\Element\Template" name="product-grid-container"
+                   template="Magento_Catalog::category/grid-container.phtml" after="search.banner"/>
+        </referenceContainer>
+
+        <move element="preview.content" destination="product-grid-container"/>
+        <move element="main" destination="columns" before="-"/>
+        <move element="page.main.title" destination="search.banner"/>
+        <referenceContainer name="columns" htmlClass="grid-columns-plp"/>
+        <move element="div.sidebar.additional" destination="sidebar.main" after="-"/>
+
+        <referenceContainer name="sidebar.main">
+            <block class="Magento\LayeredNavigation\Block\Navigation\Category" name="catalog.leftnav" before="-"
+                   template="Magento_LayeredNavigation::layer/view.phtml">
+                <block class="Magento\Catalog\Block\Product\ProductList\Toolbar" name="filter_sort"/>
+                <block class="Magento\LayeredNavigation\Block\Navigation\State" name="catalog.navigation.state"
+                       as="state"/>
+                <block class="Magento\LayeredNavigation\Block\Navigation\FilterRenderer"
+                       name="catalog.navigation.renderer" as="renderer"
+                       template="Magento_LayeredNavigation::layer/filter.phtml">
+                    <arguments>
+                        <argument name="product_layer_view_model" xsi:type="object">
+                            Magento\LayeredNavigation\ViewModel\Layer\Filter
+                        </argument>
+                    </arguments>
+                </block>
+            </block>
+        </referenceContainer>
     </body>
 </page>
