--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filters-popup.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filters-popup.phtml
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Catalog\Model\Layer\Filter\AbstractFilter;
 use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
 
@@ -13,6 +14,7 @@ use Satoshi\Theme\Block\Template;
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
+/** @var AbstractFilter[] $filters */
 $filters = $block->getData('filters');
 $renderer = $block->getData('renderer');
 $sortOptions = $block->getData('sort_options') ?? [];
@@ -30,8 +32,8 @@ $sorter = $block->getData('sorter') ?? [];
                     @click="isTopLevel = true; currentName = ''"
                     :tabindex="isTopLevel ? -1 : 0"
                     :class="{
-                        '-translate-x-full': isTopLevel,
-                        'translate-x-0': !isTopLevel,
+                        '-translate-x-full': !!isTopLevel,
+                        'translate-x-0': !isTopLevel
                     }"
                 >
                     <?= $hyvaicons->renderHtml('chevron', 'rotate-180'); ?>
@@ -39,8 +41,8 @@ $sorter = $block->getData('sorter') ?? [];
                 <h2
                     class="text-md text-text-500 transition-transform duration-300 motion-reduce:transition-none"
                     :class="{
-                        'translate-x-0': isTopLevel,
-                        'translate-x-[34px]': !isTopLevel,
+                        'translate-x-0': !!isTopLevel,
+                        'translate-x-[34px]': !isTopLevel
                     }"
                     x-text="isTopLevel ? '<?= $escaper->escapeJs(__('Filters')) ?>' : currentName"
                 >
@@ -68,6 +70,7 @@ $sorter = $block->getData('sorter') ?? [];
             <!-- Items -->
             <nav class="flex flex-col gap-3 py-3" x-show="isTopLevel"
                  aria-label="<?= $escaper->escapeHtmlAttr(__('Available filters')) ?>">
+                <!-- Sort by -->
                 <button
                     type="button"
                     class="flex min-h-10 items-center justify-between py-1"
@@ -80,24 +83,28 @@ $sorter = $block->getData('sorter') ?? [];
                         <?= $hyvaicons->renderHtml('chevron'); ?>
                     </p>
                 </button>
+
+                <!-- Filters -->
                 <?php foreach ($filters as $filter): ?>
-                    <button
-                        type="button"
-                        class="flex min-h-10 items-center justify-between py-1"
-                        @click="isTopLevel = false; currentName='<?= $escaper->escapeJs($filter->getName()) ?>'"
-                    >
-                        <p class="grow text-left">
-                            <?= $escaper->escapeHtml($filter->getName()) ?>
-                        </p>
-                        <p class="icon-button">
-                            <?= $hyvaicons->renderHtml('chevron'); ?>
-                        </p>
-                    </button>
+                    <?php if ($filter->getItemsCount()): ?>
+                        <button
+                            type="button"
+                            class="flex min-h-10 items-center justify-between py-1"
+                            @click="isTopLevel = false; currentName='<?= $escaper->escapeJs($filter->getName()) ?>'"
+                        >
+                            <p class="grow text-left">
+                                <?= $escaper->escapeHtml($filter->getName()) ?>
+                            </p>
+                            <p class="icon-button">
+                                <?= $hyvaicons->renderHtml('chevron'); ?>
+                            </p>
+                        </button>
+                    <?php endif; ?>
                 <?php endforeach; ?>
             </nav>
 
             <div>
-                <fieldset class="flex-1 md:border-t md:border-bg-600 md:py-5" x-show="currentName == 'Sort by'">
+                <fieldset class="flex-1 md:border-t md:border-bg-600 md:py-5" x-show="currentName === 'Sort by'">
                     <div
                         id="filter-sort_by"
                         key="filter-sort_by"
@@ -146,7 +153,7 @@ $sorter = $block->getData('sorter') ?? [];
             <!-- Buttons -->
             <div class="min-h-20"></div>
             <template x-portal="document.getElementById('popup-fixed-content-portal')">
-                <div x-transition.opacity x-show="$store.popup.currentPopup == 'filters'">
+                <div x-transition.opacity x-show="$store.popup.currentPopup === 'filters'">
                     <div class="-top-10 end-0 start-0 h-10 bg-gradient-to-t from-bg-500 to-transparent"></div>
                     <div class="flex items-center gap-3 bg-bg-500 px-4 pb-2">
                         <button
