--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
@@ -104,7 +104,8 @@ $template
         'slides_amount_in_view' => $autoResize ? $slidesAmountInView : ['xs' => 2.2, 'sm' => 2.5, 'md' => 3, 'lg' => 4, 'xl' => 5, 'xxl' => 5],
         'title' => $escaper->escapeHtml($block->getData('heading')),
         'id' => 'collections-list-' . uniqid(),
-        'is_full_page' => true,
+        'is_full_page' => false,
+        'class' => 'slider--pagebuilder'
     ])
     ->render('Magento_Catalog::html/slider.phtml')
 ?>
