INTERNAL-411-142; fix cart error display on bth cart and PDP pages, and enhance error msg, and show which product was out of the stock

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
@@ -9,7 +9,7 @@
             </block>
         </referenceBlock>
 
-        <referenceBlock name="product.info">
+        <referenceBlock name="product.info" class="Satoshi\Catalog\Block\Product\View">
             <!-- Product actions -->
             <block class="Magento\Catalog\Block\Product\View" name="product.actions"
                    template="Magento_Catalog::product/view/product-actions.phtml"/>
