INTERNAL-411-136 - Fix popup scroll issue

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-products.phtml
@@ -25,7 +25,7 @@ use Satoshi\Theme\Block\Template;
       x-show="products.length"
       class="grid grid-cols-2 gap-5 md:grid-cols-3 lg:grid-cols-4"
       x-transition.opacity
-      x-transition.delay.700ms
+      x-transition.duration.700ms
     >
       <template
         x-for="product in products"
