--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/quotes.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/quotes.phtml
@@ -22,6 +22,8 @@ $decodeHelper = $this->helper(DecodeHelper::class);
 $quotes = $block->getData('quotes');
 $quotes = $decodeHelper->decodeJSONHTMLEntity($quotes);
 $id = uniqid();
+// Test cache
+$block->setData('cache_tags', [$id]);
 
 $slidesHtml = '';
 foreach ($quotes as $quote) {
