INTERNAL-411-132; fix undefined isLoadingProducts in console error

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -38,7 +38,7 @@ $breadcrumbs = $catalogData->getBreadcrumbPath();
                 data-content-wrapper
                 id="product-grid"
                 class="mb-5 grid gap-6 transition-opacity duration-100 ease-linear grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5"
-                :class="{'opacity-0': isLoadingProducts}"
+                :class="{'opacity-0': typeof isLoadingProducts !== 'undefined' && isLoadingProducts}"
             >
                 <!-- pagination-content -->
                 <?php
