--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -105,7 +105,7 @@ $title = $block->getData('title');
                             x-show="!$store.main.isMobile || $store.popup.currentPopup === 'cart'"
                         >
                             <div
-                                class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3"
+                                class="relative overflow-x-hidden px-4 md:rounded-b-md max-md:px-3"
                                 x-show="!isCartEmpty"
                             >
                                 <?=
@@ -121,7 +121,7 @@ $title = $block->getData('title');
                         <template
                             x-portal="$store.main.isMobile ? document.querySelector('body') : document.getElementById('cart-totals')">
                             <div
-                                class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3 max-md:fixed bottom-0 left-0 right-0 md:w-[--minicart-width] md:h-full md:border md:rounded-sm"
+                                class="relative overflow-x-hidden px-4 md:rounded-b-md max-md:px-3 max-md:fixed bottom-0 left-0 right-0 md:w-[--minicart-width] md:h-full md:border md:rounded-sm"
                                 x-show="!isCartEmpty"
                             >
                                 <?=
