--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -91,7 +91,7 @@ $title = $block->getData('title');
                     ->setData(['isCartPage' => $isCartPage])
                     ->render('Magento_Theme::html/header/cart/minicart-items.phtml')
                 ?>
-                <div class="h-[140px] <?= $isCartPage ? 'md:hidden' : '' ?>"></div>
+                <div class="<?= !$isCartPage ? 'h-[140px]' : '' ?>"></div>
 
                 <?php if (!$isCartPage) : ?>
                     <template
