--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -88,14 +88,15 @@ if ($product) {
                         width="100%"
                         class="max-h-full w-auto object-center object-cover h-full mix-blend-darken"
                         :src="src"
+                        alt=""
                     >
                 </div>
-                <div class="flex items-center justify-center">
+                <div class="flex items-center justify-center bg-[--fade-in-bg]">
                     <img
                         id="mobile-image"
                         height="100%"
                         width="100%"
-                        class="no-fade object-center w-auto object-cover h-full"
+                        class="no-fade object-center w-auto object-cover h-full mix-blend-darken"
                         alt="<?= $escaper->escapeHtmlAttr($mainImage ? $mainImage->getData('label') : $productName) ?>"
                         src="<?= $mainImageUrl ?>"
                     >
@@ -153,6 +154,7 @@ if ($product) {
                                 :title="mobileFeaturedImage.caption || '<?= $escaper->escapeJs($productName) ?>'"
                                 class="object-center object-cover size-full mix-blend-darken"
                                 :src="mobileFeaturedImage.img"
+                                alt=""
                             />
 
                             <!-- Play button -->
