Remove debug code

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -87,7 +87,7 @@ if ($product) {
                         height="100%"
                         width="100%"
                         class="max-h-full w-auto object-center object-cover h-full mix-blend-darken"
-                        src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Color-blue.JPG"
+                        :src="src"
                         alt=""
                     >
                 </div>
