Fix selected variant image on Iphones

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/pdp_fallback.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/pdp_fallback.phtml
@@ -39,7 +39,7 @@ $mixBackground = true;
                         <img
                             :src="mobileImg"
                             class="
-                                object-cover object-center size-full absolute inset-0 m-auto
+                                object-center absolute inset-0 m-auto
                                 <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>
                                 <?= $mixBackground ? 'mix-blend-darken' : '' ?>
                             "
